Fixing bugs on Safari, mobile Webkit, and Firefox

--- a/src/components/Resume/Resume.css
+++ b/src/components/Resume/Resume.css
@@ -15,8 +15,6 @@
 }
 
 .resume-container-wrapper {
-  display: flex;
-  flex-direction: column;
   filter: var(--drop-shadow-s);
   backdrop-filter: var(--resume-backdrop-filter);
 }
@@ -32,7 +30,6 @@
 .resume-cards-container::before {
   background-color: var(--resume-background);
 }
-
 .resume-card {
   display: flex;
   gap: clamp(12px, 4vw, 24px);
@@ -45,30 +42,15 @@
   max-height: clamp(36px, 6vw, 60px);
   min-width: 0px;
   min-height: 0px;
-  overflow: hidden;
-  position: relative;
   flex-shrink: 0;
-  filter: var(--drop-shadow-xxs)
+  filter: var(--drop-shadow-xxs);
 }
 
 .resume-card-image {
   border-radius: 50%;
   width: 100%;
   height: 100%;
-  border-width: 2px;
   box-sizing: border-box;
-}
-
-.resume-card-image-container::before,
-.project-card-image-container::before {
-  box-shadow: inset 0 0px 8px hsla(0, 0%, 0%, 0.1);
-  content: "";
-  display: block;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  width: 100%;
-  border-radius: 50%;
 }
 
 .resume-card-header,
@@ -83,9 +65,6 @@
   margin-top: 0px;
   margin-bottom: 4px;
   letter-spacing: -0.0125rem;
-}
-
-.resume-card-header-main {
 }
 
 .resume-subtitle,
@@ -135,6 +114,7 @@
   flex-direction: column;
   filter: var(--drop-shadow-xs);
   transition: 0.4s;
+  backdrop-filter: var(--resume-backdrop-filter);
 }
 .project-card-wrapper:hover {
   transform: translateY(-12px);
@@ -154,8 +134,6 @@
 .project-card-image-container {
   height: 96px;
   width: 96px;
-  overflow: hidden;
-  position: relative;
   flex-shrink: 0;
   filter: var(--drop-shadow-xxs);
 }
@@ -164,7 +142,6 @@
   border-radius: 50%;
   width: 100%;
   height: 100%;
-  border-width: 2px;
   box-sizing: border-box;
 }
 
