--- a/src/components/Squircle/Squircle.css
+++ b/src/components/Squircle/Squircle.css
@@ -3,3 +3,7 @@
   height: inherit;
   aspect-ratio: inherit;
 }
+
+.squircle-wrapper {
+  /*background-color: inherit;*/
+}
